force-app/main/default/objects/Property__c/fields/Adopted_Value_Per_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Value_Per_SqFt__c</fullName>
    <label>Adopted Value Per(SqFt)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>