force-app/main/default/objects/Property__c/fields/Age_Of_Property__c.field-meta.xml
<CustomField>
    <fullName>Age_Of_Property__c</fullName>
    <label>Age Of Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>