force-app/main/default/objects/Property__c/fields/All_four_boundaries_mentioned_in_doc__c.field-meta.xml
<CustomField>
    <fullName>All_four_boundaries_mentioned_in_doc__c</fullName>
    <label>All 4 Boundaries Mentioned In Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>