force-app/main/default/objects/Property__c/fields/Area_value_per_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Area_value_per_Sq_ft__c</fullName>
    <formula>WidthSq_ft__c * LengthSq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Extent (Sq ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>