force-app/main/default/objects/Property__c/fields/BM_Comments_for_Collateral__c.field-meta.xml
<CustomField>
    <fullName>BM_Comments_for_Collateral__c</fullName>
    <label>BM Comments for Collateral</label>
    <type>TextArea</type>
</CustomField>