force-app/main/default/objects/Property__c/fields/Boundaries_as_per_document_and_physical__c.field-meta.xml
<CustomField>
    <fullName>Boundaries_as_per_document_and_physical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boundaries as per document and physical</label>
    <type>Checkbox</type>
</CustomField>