force-app/main/default/objects/Property__c/fields/Boundaries_As_Per_Inspection_Are_Same__c.field-meta.xml
<CustomField>
    <fullName>Boundaries_As_Per_Inspection_Are_Same__c</fullName>
    <label>Boundaries As Per Inspection Are Same</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>