force-app/main/default/objects/Property__c/fields/Boundries_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Boundries_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>