force-app/main/default/objects/Property__c/fields/Building_Age__c.field-meta.xml
<CustomField>
    <fullName>Building_Age__c</fullName>
    <label>Building Age</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>