force-app/main/default/objects/Property__c/fields/Building_Area_AC_Check__c.field-meta.xml
<CustomField>
    <fullName>Building_Area_AC_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in PC/AC</description>
    <label>Building Area AC Check</label>
    <type>Checkbox</type>
</CustomField>