force-app/main/default/objects/Property__c/fields/Building_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Area_Sq_Ft__c</fullName>
    <label>Building Area (Sq Ft)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>