force-app/main/default/objects/Property__c/fields/Building_area_total_value__c.field-meta.xml
<CustomField>
    <fullName>Building_area_total_value__c</fullName>
    <formula>Area_value_per_Sq_ft__c * Value_per_sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>