force-app/main/default/objects/Property__c/fields/Building_Constructed_with_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Building_Constructed_with_Remarks__c</fullName>
    <label>Building Constructed With Remarks</label>
    <type>TextArea</type>
</CustomField>