force-app/main/default/objects/Property__c/fields/Building_Floor__c.field-meta.xml
<CustomField>
    <fullName>Building_Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GF</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>