force-app/main/default/objects/Property__c/fields/Building_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Building_Ownership__c</fullName>
    <label>Building Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Constructed</fullName>
            </value>
            <value>
                <fullName>Constructed by ancestral</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>