force-app/main/default/objects/Property__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCC</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>Titled</fullName>
            </value>
            <value>
                <fullName>Hut</fullName>
            </value>
            <value>
                <fullName>Tin Sheet</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Mud</fullName>
                <isActive>false</isActive>
                <label>Mud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>