force-app/main/default/objects/Property__c/fields/Building_Value__c.field-meta.xml
<CustomField>
    <fullName>Building_Value__c</fullName>
    <formula>Building_Area_Sq_Ft__c * Building_Value_per_Sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>