force-app/main/default/objects/Property__c/fields/Building_Value_per_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Value_per_Sq_ft__c</fullName>
    <label>Building Value per Sq ft</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>