force-app/main/default/objects/Property__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <label>Carpet Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>