force-app/main/default/objects/Property__c/fields/Co_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner_Name__c</fullName>
    <label>Co-Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>