force-app/main/default/objects/Property__c/fields/Collateral_Sub_Type_Property_Details__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Sub_Type_Property_Details__c</fullName>
    <label>Collateral Sub Type/Property Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>