force-app/main/default/objects/Property__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Residential</fullName>
            </value>
            <value>
                <fullName>Rented Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>