force-app/main/default/objects/Property__c/fields/Distance_from_Branch__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Branch__c</fullName>
    <label>Distance From Branch</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>