force-app/main/default/objects/Property__c/fields/Doc_Seen_Original_with__c.field-meta.xml
<CustomField>
    <fullName>Doc_Seen_Original_with__c</fullName>
    <label>Doc Seen Original with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>III Party (Only xerox seen)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>