force-app/main/default/objects/Property__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement Deed</fullName>
            </value>
            <value>
                <fullName>Will Deed</fullName>
            </value>
            <value>
                <fullName>Sale Deed</fullName>
            </value>
            <value>
                <fullName>Release Deed</fullName>
            </value>
            <value>
                <fullName>Parition Deed</fullName>
            </value>
            <value>
                <fullName>Gift Deed</fullName>
            </value>
            <value>
                <fullName>Consent Deed</fullName>
            </value>
            <value>
                <fullName>Co-ownership deed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>