force-app/main/default/objects/Property__c/fields/East_by__c.field-meta.xml
<CustomField>
    <fullName>East_by__c</fullName>
    <label>East by</label>
    <length>80</length>
    <type>Text</type>
</CustomField>