force-app/main/default/objects/Property__c/fields/East_By_Land_Physical__c.field-meta.xml
<CustomField>
    <fullName>East_By_Land_Physical__c</fullName>
    <label>East By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>