force-app/main/default/objects/Property__c/fields/East_By_Land_Same_As_Document__c.field-meta.xml
<CustomField>
    <fullName>East_By_Land_Same_As_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>East By Land Same As Document</label>
    <type>Checkbox</type>
</CustomField>