force-app/main/default/objects/Property__c/fields/Enquiry_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Contact_Number__c</fullName>
    <label>Enquiry Contact Number</label>
    <type>Phone</type>
</CustomField>