force-app/main/default/objects/Property__c/fields/Enquiry_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Market_Value__c</fullName>
    <label>Enquiry Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>