force-app/main/default/objects/Property__c/fields/Existing_Encumberances__c.field-meta.xml
<CustomField>
    <fullName>Existing_Encumberances__c</fullName>
    <label>Existing Encumberances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>