force-app/main/default/objects/Property__c/fields/Extent_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Extent_Sqft__c</fullName>
    <label>Extent (Sqft)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>