force-app/main/default/objects/Property__c/fields/External_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>External_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Lawyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties (External Lawyer)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>