force-app/main/default/objects/Property__c/fields/Final_Land_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_Land_Value__c</fullName>
    <formula>Land_Area_Sq_Ft__c * Valuation_Market_Value_Per_SqFt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Land Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>