force-app/main/default/objects/Property__c/fields/FIVC_PC_Relationship__c.field-meta.xml
<CustomField>
    <fullName>FIVC_PC_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIVC PC Relationship</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Properties (FIVC PC Relationship)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>