force-app/main/default/objects/Property__c/fields/Flat_Plot_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Plot_Number__c</fullName>
    <label>Flat/Plot Number</label>
    <type>TextArea</type>
</CustomField>