force-app/main/default/objects/Property__c/fields/GuidelineValue_SqFt_asPer_LegalOpinion__c.field-meta.xml
<CustomField>
    <fullName>GuidelineValue_SqFt_asPer_LegalOpinion__c</fullName>
    <label>Guideline Value(SqFt) As Per Legal Opini</label>
    <length>6</length>
    <type>Text</type>
</CustomField>