force-app/main/default/objects/Property__c/fields/hasRelatedRecords__c.field-meta.xml
<CustomField>
    <fullName>hasRelatedRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark true when property has its related properties</description>
    <label>hasRelatedRecords</label>
    <type>Checkbox</type>
</CustomField>