force-app/main/default/objects/Property__c/fields/House_Door_No__c.field-meta.xml
<CustomField>
    <fullName>House_Door_No__c</fullName>
    <label>House/Door No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>