force-app/main/default/objects/Property__c/fields/If_No_Reason__c.field-meta.xml
<CustomField>
    <fullName>If_No_Reason__c</fullName>
    <label>If No, Reason</label>
    <type>TextArea</type>
</CustomField>