force-app/main/default/objects/Property__c/fields/Is_Fiv_B_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Fiv_B_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fiv B Completed</label>
    <type>Checkbox</type>
</CustomField>