force-app/main/default/objects/Property__c/fields/Is_Initiate_From_Lead_Details__c.field-meta.xml
<CustomField>
    <fullName>Is_Initiate_From_Lead_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initiate From Lead Details</label>
    <type>Checkbox</type>
</CustomField>