force-app/main/default/objects/Property__c/fields/Is_Legal_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legal Updated</label>
    <type>Checkbox</type>
</CustomField>