force-app/main/default/objects/Property__c/fields/Is_living_property_is_own_property__c.field-meta.xml
<CustomField>
    <fullName>Is_living_property_is_own_property__c</fullName>
    <label>Is Living Property Is Own Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>