force-app/main/default/objects/Property__c/fields/Is_Online_Ec_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Online_Ec_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Online Ec Completed</label>
    <type>Checkbox</type>
</CustomField>