force-app/main/default/objects/Property__c/fields/IsPrimaryApplicant__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryApplicant__c</fullName>
    <formula>ISPICKVAL( Loan_Applicant__r.Customer_Type__c , &apos;Primary Applicant&apos;)</formula>
    <label>Is Primary Applicant</label>
    <type>Checkbox</type>
</CustomField>