force-app/main/default/objects/Property__c/fields/isPrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>isPrimaryOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimaryOwner</label>
    <type>Checkbox</type>
</CustomField>