force-app/main/default/objects/Property__c/fields/Land_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Land_Area_Sq_Ft__c</fullName>
    <label>Land Area (Sq Ft)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>