force-app/main/default/objects/Property__c/fields/Land_area_valuation_remarks__c.field-meta.xml
<CustomField>
    <fullName>Land_area_valuation_remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>