force-app/main/default/objects/Property__c/fields/Land_Measurement_total_area__c.field-meta.xml
<CustomField>
    <fullName>Land_Measurement_total_area__c</fullName>
    <formula>Land_Measurement_Length_Sq_ft__c * Land_Measurement_Width_Sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>