force-app/main/default/objects/Property__c/fields/Land_Measurement_Width_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Land_Measurement_Width_Sq_ft__c</fullName>
    <label>Width(Sq Ft)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>