force-app/main/default/objects/Property__c/fields/Link_Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Link_Doc_Date__c</fullName>
    <label>Link Doc Date</label>
    <type>Date</type>
</CustomField>