force-app/main/default/objects/Property__c/fields/Link_Doc_Status__c.field-meta.xml
<CustomField>
    <fullName>Link_Doc_Status__c</fullName>
    <label>Link Doc Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xerox Seen</fullName>
            </value>
            <value>
                <fullName>Written in Title document but not seen</fullName>
            </value>
            <value>
                <fullName>Single Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>