force-app/main/default/objects/Property__c/fields/Link_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Document_Type__c</fullName>
    <label>Link Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift Deed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Partition Deed</fullName>
            </value>
            <value>
                <fullName>Release Deed</fullName>
            </value>
            <value>
                <fullName>Sale Deed</fullName>
            </value>
            <value>
                <fullName>Settlement Deed</fullName>
            </value>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Co-ownership Deed</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>