force-app/main/default/objects/Property__c/fields/Link_Documents_in_Name_of__c.field-meta.xml
<CustomField>
    <fullName>Link_Documents_in_Name_of__c</fullName>
    <label>Link Documents In Name Of</label>
    <length>70</length>
    <type>Text</type>
</CustomField>