force-app/main/default/objects/Property__c/fields/Living_property_Distance_from_Branch__c.field-meta.xml
<CustomField>
    <fullName>Living_property_Distance_from_Branch__c</fullName>
    <label>Living Property Distance From Branch</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>