force-app/main/default/objects/Property__c/fields/Living_property_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Living_property_Pincode__c</fullName>
    <label>Living Property Pincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>