force-app/main/default/objects/Property__c/fields/Location_of_Mortgage_Property__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Mortgage_Property__c</fullName>
    <label>Location Of Mortgage Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developing Area</fullName>
            </value>
            <value>
                <fullName>Few Or No House</fullName>
            </value>
            <value>
                <fullName>Residence Area</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>