force-app/main/default/objects/Property__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Login</label>
    <referenceTo>Pre_Login__c</referenceTo>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>