force-app/main/default/objects/Property__c/fields/Login_EC_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Login_EC_Date_From__c</fullName>
    <label>Login EC Date From</label>
    <type>Date</type>
</CustomField>