force-app/main/default/objects/Property__c/fields/Login_EC_Date_Till__c.field-meta.xml
<CustomField>
    <fullName>Login_EC_Date_Till__c</fullName>
    <label>Login EC Date Till</label>
    <type>Date</type>
</CustomField>