force-app/main/default/objects/Property__c/fields/Login_EC_Number__c.field-meta.xml
<CustomField>
    <fullName>Login_EC_Number__c</fullName>
    <label>Login EC Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>