force-app/main/default/objects/Property__c/fields/Login_EC_Type__c.field-meta.xml
<CustomField>
    <fullName>Login_EC_Type__c</fullName>
    <label>Login EC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online EC</fullName>
            </value>
            <value>
                <fullName>SRO Physical EC</fullName>
            </value>
            <value>
                <fullName>SRO Online EC</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>