force-app/main/default/objects/Property__c/fields/Market_Value_Of_Property__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_Of_Property__c</fullName>
    <label>Market Value Of Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>