force-app/main/default/objects/Property__c/fields/Mortgage_Property_Area__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Property_Area__c</fullName>
    <label>Mortgage Property Area *</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>