force-app/main/default/objects/Property__c/fields/Mortgage_property_distance_from_branch__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_distance_from_branch__c</fullName>
    <label>Mortgage Property Distance From Branch</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>