force-app/main/default/objects/Property__c/fields/Mortgage_property_Living_property_are__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_Living_property_are__c</fullName>
    <label>Mortgage Property &amp; Living Property Are</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>