force-app/main/default/objects/Property__c/fields/Mortgage_property_PINCODE__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_PINCODE__c</fullName>
    <label>Mortgage property PINCODE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>