force-app/main/default/objects/Property__c/fields/Mortgage_Property_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Property_Remarks__c</fullName>
    <label>Mortgage Property Remarks</label>
    <type>TextArea</type>
</CustomField>