force-app/main/default/objects/Property__c/fields/Mortgage_Property_State__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Property_State__c</fullName>
    <formula>Application__r.Sourcing_Branch__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mortgage Property State</label>
    <type>Text</type>
</CustomField>